Finall of project

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                             <img src="img/Sygnet.png" alt="Infinity Sygnet" class="image">
                         </a>
                     </div>
-                    <div class="col-tbl-8 col-lpt-8 offset-lpt-1 ase">
+                    <div class="col-tbl-8 col-lpt-8 offset-mbl-1 ase">
                         <nav class="header__navigation">
                             <ul class="list-header d-flex jcc">
                                 <li class="list-header__element"><a href="#mission" class="link link--white">Mission</a></li>
@@ -333,8 +333,8 @@
             <div class="filter filter-color filter-color--white"></div>
             <div class="container">
                 <div class="block__content block-map reset-martop">
-                    <div class="col-tbl-3 offset-2">
-                        <h4 class="block-map__firm ft-mada">Infinity Group Sp.z o.o.</h4>
+                    <div class="col-mbl-10 col-tbl-5 col-lpt-3 offset-mbl-2">
+                        <h4 class="block-map__firm ft-mada"><img src="img/Compass.svg" class="image-map" alt="Compass"> Infinity Group Sp.z o.o.</h4>
                         <ul class="list h4">
                             <li class="list__element">ul.Skladowa 12,</li>
                             <li class="list__element">15-399 Bialystok,</li>
@@ -350,7 +350,17 @@
         <!-- : Block Contact start : -->
         <section class="block trigger-scroll" id="contact">
             <div class="container">
-                <h2 class="block__title ft-homenaje offset-1">Contact</h2>
+                <div class="row aic jcsa">
+                    <div class="col-tbl-5 offset-1">
+                        <h2 class="block__title ft-homenaje reset-marpad">Contact</h2>
+                    </div>
+                    <div class="col-tbl-6 h4 block--texright">
+                        <a href="#map" class="link link--white button button-operative ft-homenaje">
+                            Let us know how to contact You 
+                            <img src="img/Arrowup-small.svg" class="image image-contact" alt="ArrowUp">
+                        </a>
+                    </div>
+                </div>
                 <div class="block__content block-contact">
                     <div class="col-9 ma">
                         <p class="h4">
