Finall of finall

--- a/src/index.html
+++ b/src/index.html
@@ -390,7 +390,10 @@
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                             </label>
                             <div class="block-contact__button block--texcen reset-col">
-                                <button class="button button-operative ft-homenaje"><span class="h4">send details</span><img src="img/right-arrow.svg" alt="Right arrow" class="form-contact__arrow"></button>
+                                <button class="button button-operative ft-homenaje">
+                                    <span class="h4">send details</span>
+                                    <img src="img/right-arrow.svg" alt="Right arrow" class="form-contact__arrow">
+                                </button>
                             </div>
                         </form>
                     </div>
