--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,7 +83,7 @@
         <!-- :  Mobile navigation end  : -->
 
         <!-- : Block with header and hero start : -->
-        <section class="block block--backimage trigger-scroll" style="background-image: url(img/Background.jpg);">
+        <div class="block block--backimage trigger-scroll" style="background-image: url(img/Background.jpg);">
             <div class="filter filter-repeatgrad"></div>
             <div class="filter filter-linegrad filter-linegrad--operative"></div>
             <div class="container">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- : Block with header and hero end : -->
 
         <!-- : Block mission start : -->
@@ -384,9 +384,9 @@
                             </div>
                             <label for="accept" class="checkbox-container-contact h5 reset-marpad validate-checkbox">
                                 <input type="checkbox" id="accept" name="accept" class="checkbox-container-contact__checkbox accept__trigger">
-                                <div class="checkbox-container-contact__box fl">
+                                <span class="checkbox-container-contact__box fl">
                                     <i class="checkbox-container-contact__mark fas fa-check"></i>
-                                </div> 
+                                </span> 
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                             </label>
                             <div class="block-contact__button block--texcen reset-col">
