--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <!-- : Extra navigation start : -->
-        <div class="navigation-aside">
+        <nav class="navigation-aside">
             <div class="navigation-aside__sensor">
                 <h4 class="reset-marpad"><span class="navigation-aside__current"></span>/<span class="navigation-aside__all"></span></h4>
             </div>
@@ -62,7 +62,7 @@
                     <img src="img/ArrowDown.svg" class="image image-arrow" alt="ArrowDown">
                 </a>
             </div>
-        </div>
+        </nav>
         <!-- : Extra navigation end : -->
 
         <!-- : Mobile navigation start : -->
